fix: align the add_card form; make scroll text of the card

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,12 @@
   box-sizing: border-box;
 }
 
-
 ul {
   list-style: none;
 }
 
 .app {
   margin-top: 120px;
-  
 }
 
 .add-card {
@@ -19,11 +17,7 @@ ul {
   width: 517px;
   font-family: Roboto;
   margin-bottom: 84px;
-}
-
-.add-card__inner {
-  display: inline-flex;
-  justify-content: space-between;
+  vertical-align: top;
 }
 
 .add-card__input-field {
@@ -58,14 +52,14 @@ ul {
   box-shadow: 2px 2px 2px gray;
 }
 
-.cards-inner{
+.cards-inner {
   margin: 0 auto;
   width: 752px;
+
 }
 
 .cards {
   padding: 0 0 0 0;
-
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -88,10 +82,16 @@ ul {
   text-align: center;
   position: absolute;
   top: 24px;
-  left: 12px;
-  bottom: 36px;
   right: 48px;
+  bottom: 36px;
+  left: 12px;
   line-height: 21px;
+  word-wrap: break-word;
+  overflow: auto;
+}
+
+.card__text::-webkit-scrollbar {
+  width: 0px;
 }
 
 .card__delete-btn {
@@ -100,7 +100,7 @@ ul {
   border: 0px;
   border-radius: 12px;
   background: rgba(196, 196, 196, 0.5);
-  transform: rotate(45deg); 
+  transform: rotate(45deg);
   color: white;
   font-size: 24px;
   text-align: center;
